--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-asgiref==3.11.0
+asgiref==3.10.0
 attrs==25.4.0
-Django==6.0
+Django==5.2.8
 django-cors-headers==4.9.0
 django-filter==25.2
 djangorestframework==3.16.1
@@ -16,6 +16,9 @@ python-decouple==3.8
 pytz==2025.2
 PyYAML==6.0.3
 referencing==0.37.0
-rpds-py==0.30.0
-sqlparse==0.5.4
+rpds-py==0.28.0
+setuptools==67.6.1
+sqlparse==0.5.3
+typing_extensions==4.15.0
 uritemplate==4.2.0
+wheel==0.40.0
